# GlobalVariablePass

./: CMakeLists.txt  README.md  coredump.ll  sys.ll  test.sh  testingsource.c
globvars/: CMakeLists.txt  globvars.cpp
